syntax = "proto3";
package bestia.messages;

import "messages/model.proto";

option java_package = "net.bestia.messages.proto";
option java_outer_classname = "AccountProtos";

message AuthRequest {
  int64 account_id = 1;
  string token = 2;
}

enum LoginStatus {
    UNAUTHORIZED = 0;
    SUCCESS = 1;
    NO_LOGINS_ALLOWED = 2;
}

message AuthResponse {
    int64 accountId = 1;
    LoginStatus login_status = 2;
}

message AccountVarRequest {
    Account account = 1;
    string key = 2;
}

message AccountVarResponse {
    Account account = 1;
    string key = 2;
    string value = 3;
}